imperative/kedaDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kedaweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kedaweb
  template:
    metadata:
      labels:
        app: kedaweb
    spec:
      containers:
      - name: myweb
        image: tkubica/web:python-1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 64M
          limits:
            cpu: 500m
            memory: 256M
