imperative/pvcDiskPod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: pod-azuredisk
spec:
  nodeSelector:
    kubernetes.io/os: linux
  containers:
    - image: tkubica/mybox
      name: mybox
      command:
        - "/bin/sh"
        - "-c"
        - while true; do echo $(date) >> /mnt/azuredisk/outfile; sleep 1; done
      volumeMounts:
        - name: azuredisk01
          mountPath: "/mnt/azuredisk"
  volumes:
    - name: azuredisk01
      persistentVolumeClaim:
        claimName: pvc-azuredisk
