imperative/secretViaApi.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-secrets-api
  labels:
    aadpodidbinding: secrets-reader
spec:
  containers:
    - name: ubuntu
      image: tkubica/mybox
      resources:
        requests:
          cpu: 50m
          memory: 32M
        limits:
          cpu: 500m
          memory: 256M
