imperative/secretViaProvider.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-secrets-store-inline
  labels:
    aadpodidbinding: secrets-reader
spec:
  containers:
    - name: ubuntu
      image: tkubica/mybox
      resources:
        requests:
          cpu: 50m
          memory: 32M
        limits:
          cpu: 500m
          memory: 256M
      volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
  volumes:
    - name: secrets-store-inline
      csi:
        driver: secrets-store.csi.k8s.io
        readOnly: true
        volumeAttributes:
          secretProviderClass: azure-keyvault
