imperative/pvcShareDemo.yaml
kind: Pod
apiVersion: v1
metadata:
  name: sharedemo
  labels:
    app: sharedemo
spec:
  containers:
    - image: nginx
      name: nginx
      volumeMounts:
        - name: azurefile
          mountPath: "/usr/share/nginx/html"
      ports:
      - containerPort: 80
  volumes:
    - name: azurefile
      persistentVolumeClaim:
        claimName: pvc-azurefileexisting
---
kind: Service
apiVersion: v1
metadata:
  name: sharedemo-service-ext-public
spec:
  selector:
    app: sharedemo
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
