imperative/ingressAgicPrivateHttps.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: ingress-agic-private-https
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/use-private-ip: "true"
    cert-manager.io/issuer: selfsigned-issuer
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: myweb
              port: 
                number: 80
      host: web1.private.demo
  tls:
    - hosts:
      - web1.private.demo
      secretName: web1-cert
