imperative/kedaIngressAgic.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-agic-kedaweb
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/use-private-ip: "true"
    cert-manager.io/issuer: selfsigned-issuer
spec:
  rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: kedaweb
            servicePort: 80
      host: web3.private.demo
  tls:
    - hosts:
      - web3.private.demo
      secretName: web3-cert
